--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main id="main">My ID is "main"!</main>
     <br />
     <div>
-        <label>Input:</label><input id="input" onclick="addingEventListener()" />
+        <label>Input:</label><input id="input" />
     </div>
     <br />
     <div>
